...
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RRK-sB-Gfm">
                                        <rect key="frame" x="77" y="0.0" width="98" height="30"/>
                                        <state key="normal" title="Main Headline"/>
                                        <connections>
                                            <action selector="sortByHeadlineButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oua-0n-nQ4"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oVk-K6-7m1">
                                        <rect key="frame" x="190" y="0.0" width="33" height="30"/>
                                        <state key="normal" title="Date"/>
                                        <connections>
                                            <action selector="sortByDateButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="75X-bt-SnP"/>
                                        </connections>
                                    </button>
                                </subviews>
                            </stackView>
...
